<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_children"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_children" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_question_answer_black_24dp"
                android:title="@string/menu_faq" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_new_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
