<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/group1">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/action_rate"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:orderInCategory="100"
            android:title="@string/action_rate"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group3">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:orderInCategory="100"
            android:title="@string/action_about"
            app:showAsAction="never" />
    </group>


</menu>
