<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true"
    tools:context=".Activities.SignUPActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/slanted_rectange">

        <ScrollView
            android:id="@+id/scroll_view_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:outlineAmbientShadowColor="@color/colorIndigo"
            android:outlineSpotShadowColor="@color/colorIndigo"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="30dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorYKISN">


                    <TextView
                        android:id="@+id/tv_textshare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="45dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@+id/img_app"
                        android:fontFamily="@font/calibri_regular"
                        android:text="Frequently Asked Questions"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorBlack"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_textshare"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical"
                        android:padding="10dp">


                            <TextView
                                android:id="@+id/tv_question_no_1_str"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:lineSpacingExtra="7dp"
                                android:paddingLeft="10dp"
                                android:text="@string/question_no_1_str"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@color/colorBlack"
                                android:textSize="10dp"
                                android:textStyle="bold" />



                            <TextView
                                android:id="@+id/tv_answer_no_1_str"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/tv_question_no_1_str"
                                android:layout_marginLeft="15dp"

                                android:paddingLeft="10dp"
                                android:text="@string/answer_no_1_str"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@color/colorBlack"
                                android:textSize="10dp"
                                />




                            <TextView
                                android:id="@+id/tv_question_no_2_str"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/tv_answer_no_1_str"
                                android:layout_marginTop="10dp"
                                android:paddingLeft="10dp"
                                android:text="@string/question_no_2_str"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@color/colorBlack"
                                android:textSize="10dp"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/tv_answer_no_2_str"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/tv_question_no_2_str"
                                android:layout_marginLeft="5dp"
                                android:paddingLeft="20dp"
                                android:text="@string/answer_no_2_str"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="@color/colorBlack"
                                android:textSize="10dp"
                                />

                                <TextView
                                    android:id="@+id/tv_question_no_3_str"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_answer_no_2_str"
                                    android:paddingLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:lineSpacingExtra="7dp"
                                    android:text="@string/question_no_3_str"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="10dp"
                                    android:textStyle="bold" />




                                <TextView
                                    android:id="@+id/tv_answer_no_3_str"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_question_no_3_str"
                                    android:layout_marginLeft="15dp"
                                    android:paddingLeft="10dp"
                                    android:text="@string/answer_no_3_str"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="10dp"
                                    />



                                <TextView
                                    android:id="@+id/tv_question_no_4_str"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_answer_no_3_str"
                                    android:layout_marginTop="10dp"
                                    android:lineSpacingExtra="7dp"
                                    android:paddingLeft="10dp"
                                    android:text="@string/question_no_4_str"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="10dp"
                                    android:textStyle="bold" />


                                <TextView
                                    android:id="@+id/tv_answer_no_4_str"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_question_no_4_str"
                                    android:layout_marginLeft="15dp"
                                    android:paddingLeft="10dp"
                                    android:text="@string/answer_no_4_str"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="10dp"
                                    />



                                <TextView
                                    android:id="@+id/tv_question_no_5_str"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_answer_no_4_str"
                                    android:layout_marginTop="10dp"

                                    android:paddingLeft="10dp"
                                    android:text="@string/question_no_5_str"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="10dp"
                                    android:textStyle="bold" />


                                <TextView
                                    android:id="@+id/tv_answer_no_5_str"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tv_question_no_5_str"
                                    android:layout_marginLeft="15dp"
                                    android:paddingLeft="10dp"
                                    android:text="@string/answer_no_5_str"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="10dp"
                                    />




                 </LinearLayout>
                </RelativeLayout>
</androidx.cardview.widget.CardView>
        </ScrollView>

</RelativeLayout>

</androidx.cardview.widget.CardView>