<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYKISN"
    tools:context=".Activities.SplashActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorYKISN"
            >

            <TextView
                android:id="@+id/tv_lapcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="65dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="monospace"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/indigologo"
                />

            <ImageView
                android:id="@+id/splash_img"
                android:layout_width="194dp"
                android:layout_height="236dp"
                android:layout_below="@id/tv_lapcs"
                android:layout_centerHorizontal="true"
                android:src="@drawable/lapcs_logo2_new"
                />
<!--                android:layout_marginTop="20dp"-->
            <TextView
                android:id="@+id/tv_ykisn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/splash_img"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/app_slogan"
                android:textColor="@color/colorBlack"
                android:textSize="30dp"
                android:textStyle="bold"
                app:fontFamily="@font/calibri_regular"

                />




            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ykisn"
                android:layout_centerInParent="true"
                android:minHeight="50dp"
                android:minWidth="200dp"
                android:max="100"
                android:indeterminate="false"
                android:progress="0"
                />


            <TextView
                android:id="@+id/tv_powered_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/calibri_regular"
                android:text="@string/powered_by"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                android:layout_above="@+id/tv_company_name"
                />


            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textColor="@color/indigologo"
                android:textSize="20dp"
                android:textStyle="bold"
                app:fontFamily="@font/calibri_regular" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>