<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="15dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorYKISN">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/img_app"
            android:fontFamily="@font/calibri_regular"
            android:text="@string/Rename_Device_str"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/editTextReassign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/Child_name_str"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_reassign_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/gradient"
                android:text="@string/Reassign_str"
                android:textAlignment="center"
                android:textColor="@color/colorFormBackground"
                android:textSize="20dp" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>